--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,11 +13,14 @@ click-repl==0.3.0
 cron_descriptor==2.0.6
 Django==5.2.7
 django-celery-beat==2.8.1
+django-cors-headers==4.6.0
 django-environ==0.12.0
+django-extensions==4.1
 django-filter==25.2
 django-timezone-field==7.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+drf-spectacular==0.28.0
 environ==1.0
 h11==0.16.0
 idna==3.11
