--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.90.2",
-    "axios": "^1.12.2",
+    "framer-motion": "^11.0.0",
     "jwt-decode": "^4.0.0",
     "next": "15.5.4",
     "react": "19.1.0",
@@ -19,11 +24,29 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^16.0.0-rc.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-testing-library": "^6.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
