--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react": "^16.0.0-rc.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -47,6 +47,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.3"
   }
 }
